--- a/src/Makefile
+++ b/src/Makefile
@@ -15,6 +15,7 @@ install:
 	install -m 644 modules/* $(DESTDIR)/usr/share/YaST2/modules/
 	install -m 644 desktop/sap-installation-wizard.desktop $(DESTDIR)/usr/share/applications/YaST2/
 	install -m 644 scrconf/cfg_sap-installation-wizard.scr $(DESTDIR)/usr/share/YaST2/scrconf/
+	install -m 644 scrconf/sysconfig_hana-firewall.scr $(DESTDIR)/usr/share/YaST2/scrconf/
 	install -m 644 misc/sap-installation-wizard     $(DESTDIR)/var/adm/fillup-templates/sysconfig.sap-installation-wizard
 	install -m 644 misc/sap-installation-wizard.xml $(DESTDIR)/etc/
 	install -m 644 misc/firstboot.xml $(DESTDIR)/etc/YaST2/firstboot-sap.xml
