--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 install:
 	install -d $(DESTDIR)/etc/YaST2/
+	install -d $(DESTDIR)/etc/profile.d/
 	install -d $(DESTDIR)/etc/sysconfig/
 	install -d $(DESTDIR)/usr/share/YaST2/clients/
 	install -d $(DESTDIR)/usr/share/applications/YaST2/
@@ -13,8 +14,9 @@ install:
 	install -m 644 lib/sap/* $(DESTDIR)/usr/share/YaST2/lib/sap/
 	install -m 644 clients/* $(DESTDIR)/usr/share/YaST2/clients/
 	install -m 644 modules/* $(DESTDIR)/usr/share/YaST2/modules/
-	install -m 644 desktop/sap-installation-wizard.desktop $(DESTDIR)/usr/share/applications/YaST2/
+	install -m 644 desktop/*.desktop $(DESTDIR)/usr/share/applications/YaST2/
 	install -m 644 misc/sap-installation-wizard     $(DESTDIR)/var/adm/fillup-templates/sysconfig.sap-installation-wizard
 	install -m 644 misc/sap-installation-wizard.xml $(DESTDIR)/etc/
-	install -m 644 misc/firstboot.xml $(DESTDIR)/etc/YaST2/firstboot-sap.xml
+	install -m 644 misc/firstboot.xml  $(DESTDIR)/etc/YaST2/firstboot-sap.xml
+	install -m 744 misc/sap-profile.sh $(DESTDIR)/etc/profile.d/
 
