--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ install:
 	install -d $(DESTDIR)/var/adm/fillup-templates/
 	install -d $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -d $(DESTDIR)/usr/share/YaST2/lib/sap/
-	install -d $(DESTDIR)/usr/lib/YaST2/bin/
+	install -d $(DESTDIR)/usr/sbin/
 	install -m 755 include/*sh  $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -m 644 include/*xml $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -m 644 include/inifile.params.* $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
@@ -21,5 +21,6 @@ install:
 	install -m 644 misc/sap-installation-wizard     $(DESTDIR)/var/adm/fillup-templates/sysconfig.sap-installation-wizard
 	install -m 644 misc/sap-installation-wizard.xml $(DESTDIR)/etc/
 	install -m 644 misc/firstboot.xml  $(DESTDIR)/etc/YaST2/firstboot-sap.xml
-	install -m 744 misc/sap-profile.sh $(DESTDIR)/etc/profile.d/
+	install -m 755 misc/sap-profile.sh $(DESTDIR)/etc/profile.d/
+	install -m 755 misc/start_sap_docker.sh $(DESTDIR)/usr/sbin/
 
