--- a/src/Makefile
+++ b/src/Makefile
@@ -10,10 +10,14 @@ install:
 	install -d $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -d $(DESTDIR)/usr/share/YaST2/lib/sap/
 	install -d $(DESTDIR)/usr/sbin/
-	install -m 755 include/*sh  $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
-	install -m 644 include/*xml $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
-	install -m 644 include/inifile.params.* $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
-	install -m 644 include/*.dtd            $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	#Include files *.sh *.xml .dtd inifile.params.* will be copied by wildcard match
+	#All other files must be placed one by one
+	install -m 755 include/*sh                     $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	install -m 644 include/*xml                    $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	install -m 644 include/inifile.params.*        $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	install -m 644 include/*.dtd                   $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	install -m 644 include/b1h_default_properties  $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
+	install -m 644 include/hana_mdc.conf           $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -m 644 lib/sap/* $(DESTDIR)/usr/share/YaST2/lib/sap/
 	install -m 644 clients/* $(DESTDIR)/usr/share/YaST2/clients/
 	install -m 644 modules/* $(DESTDIR)/usr/share/YaST2/modules/
