--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ install:
 	install -d $(DESTDIR)/usr/share/YaST2/modules/
 	install -d $(DESTDIR)/var/adm/fillup-templates/
 	install -d $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
-	install -d $(DESTDIR)/usr/share/YaST2/lib/sap/
+	install -d $(DESTDIR)/usr/share/YaST2/lib/sap/clients/
 	install -d $(DESTDIR)/usr/sbin/
 	#Include files *.sh *.xml .dtd inifile.params.* will be copied by wildcard match
 	#All other files must be placed one by one
@@ -18,7 +18,8 @@ install:
 	install -m 644 include/*.dtd                   $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -m 644 include/b1h_default_properties  $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
 	install -m 644 include/hana_mdc.conf           $(DESTDIR)/usr/share/YaST2/include/sap-installation-wizard/
-	install -m 644 lib/sap/* $(DESTDIR)/usr/share/YaST2/lib/sap/
+	install -m 644 lib/sap/*.rb $(DESTDIR)/usr/share/YaST2/lib/sap/
+	install -m 644 lib/sap/clients/*.rb $(DESTDIR)/usr/share/YaST2/lib/sap/clients/
 	install -m 644 clients/* $(DESTDIR)/usr/share/YaST2/clients/
 	install -m 644 modules/* $(DESTDIR)/usr/share/YaST2/modules/
 	install -m 755 desktop/*.desktop $(DESTDIR)/usr/share/applications/YaST2/
