1071696 - [Build 376.1] Clicking the sap-windows-cheat-sheet on YaST opens the SAP Installation Wizard 1069572
Build348.1 | SAP Desktop icons are not shown properly
Build 392.1 | Root Desktop using gnome-shell and missing SAP icons

--- a/src/desktop/sap-windows_cheat_sheet.desktop
+++ b/src/desktop/sap-windows_cheat_sheet.desktop
@@ -6,7 +6,6 @@ X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
 X-KDE-HasReadOnlyMode=true
 X-KDE-Library=yast2
-X-SuSE-YaST-Call=sap-installation-wizard
 
 X-SuSE-translate=false
 
@@ -16,3 +15,5 @@ Exec=/usr/bin/firefox /usr/share/doc/packages/sap-installation-wizard/windows_ch
 Name=Cheat Sheet for Windows Admins
 GenericName=Cheat Sheet
 X-KDE-SubstituteUID=true
+
+Trusted=true
