--- a/src/desktop/sap-windows_cheat_sheet.desktop
+++ b/src/desktop/sap-windows_cheat_sheet.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Categories=MIME;X-SuSE-YaST;X-SuSE-YaST-Software;
+Categories=MIME;Documentation;
 
 X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
@@ -9,7 +9,7 @@ X-KDE-Library=yast2
 
 X-SuSE-translate=false
 
-Icon=yast-support
+Icon=document
 Exec=/usr/bin/firefox /usr/share/doc/packages/sap-installation-wizard/windows_cheat_sheet.pdf
 
 Name=Cheat Sheet for Windows Admins
