--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,8 @@ install:
 	install -m 755 desktop/*.desktop $(DESTDIR)/usr/share/applications/YaST2/
 	install -m 644 misc/sap-installation-wizard     $(DESTDIR)/var/adm/fillup-templates/sysconfig.sap-installation-wizard
 	install -m 644 misc/sap-installation-wizard.xml $(DESTDIR)/etc/
-	install -m 644 misc/firstboot-sap.xml           $(DESTDIR)/etc/YaST2
+	install -m 644 misc/firstboot.xml               $(DESTDIR)/etc/YaST2
 	install -m 755 misc/sap-profile.sh $(DESTDIR)/etc/profile.d/
+	install -m 644 scrconf/*  $(DESTDIR)/usr/share/YaST2/scrconf/
 	install -m 755 misc/start_sap_docker.sh $(DESTDIR)/usr/sbin/
 
