--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,29 +11,4 @@ sle15SP0:
         - sle
         - sles15
 
-sle12SP4:
-    image: suntorytimed/yast-ci:sle12-sp4
-    stage: validate
-    script: rake test:unit
-    tags:
-        - docker
-        - sle
-        - sles15
-
-sle12SP3:
-    image: suntorytimed/yast-ci:sle12-sp3
-    stage: validate
-    script: rake test:unit
-    tags:
-        - docker
-        - sle
-        - sles15
-
-sle12SP2:
-    image: suntorytimed/yast-ci:sle12-sp2
-    stage: validate
-    script: rake test:unit
-    tags:
-        - docker
-        - sle
-        - sles15
+# testing not yet added for SLE12
