--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,21 @@
 stages:
   - validate
   - test
+  - coverage
 
-sle15SP0:
-    image: suntorytimed/yast-ci:sle15-sp0
+sle15SP0_validate:
     stage: validate
+    image: suntorytimed/yast-ci:sle15-sp0
+    script: rubocop
+
+sle15SP0_test:
+    stage: test
+    image: suntorytimed/yast-ci:sle15-sp0
     script: rake test:unit
-    tags:
-        - docker
-        - sle
-        - sles15
+
+sle15SP0_coverage:
+    stage: coverage
+    image: suntorytimed/yast-ci:sle15-sp0
+    script: rake coverage
 
 # testing not yet added for SLE12
