--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,6 @@ Style/ZeroLengthPredicate:
 # the ".freeze" attribute for the constants is not nice
 Style/MutableConstant:
   Enabled: false
+
+Style/AlignHash:
+  Enabled: false
